Tue Jun 25 16:30:09 BST 2002  Olly Betts <olly@survex.com>

	* btreetest.cc: use C++ IO rather than C stdio; removed commented out
	  LFSinsertdelete1 test (it was never written and a test suite which
	  creates 2G files is probably a bit too resource hungry).

Tue Jun 25 13:56:01 BST 2002  Olly Betts <olly@survex.com>

	* btree/quartz: More use of const pointers; more use of C++ strings.

Wed Jun 19 08:56:00 BST 2002  Sam Liddicott <sam@ananova.com>

	* Fixed spec file to build for prefix=/usr not just install there

Fri Jun 14 16:35:04 BST 2002  Olly Betts <olly@survex.com>

	* docs/todo.xml: added 4 new tasks.

Fri Jun 14 16:33:08 BST 2002  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_database.cc: Cosmetic changes.

Wed Jun 12 16:31:11 BST 2002  Olly Betts <olly@survex.com>

	* QuartzDbKey, QuartzDbTag: just use a string instead of a string
	  wrapped in a structure.  We've stopped inflicting this on external
	  developers (OmData, OmKey/OmValue) so why inflict it on ourselves?

Wed Jun 12 12:26:04 BST 2002  Olly Betts <olly@survex.com>

	* Btree_item: use C++ strings rather than trying to reimplement them.

	* Fix a few warnings about unused parameters.

Wed Jun 12 02:53:16 BST 2002  Olly Betts <olly@survex.com>

	* Btree_full_compaction, Btree_close: removed - they just wrap methods
	  of Btree.

Wed Jun 12 02:28:30 BST 2002  Olly Betts <olly@survex.com>

	* Btree_item_create and Btree_item_lose subsumed into Btree_item
	  and ~Btree_item.

	* Pass C++ strings rather than const char * into various Btree open
	  methods.

	* Removed pointless wrapper functions for Btree open methods.

	* Btree_quit removed (just use delete directly).

	* Btree_create removed (just use Btree::create directly).

Wed Jun 12 00:48:52 BST 2002  Olly Betts <olly@survex.com>

	* form_key is now a method of Btree; more passing of strings rather
	  than pointer/length pairs); buffer overrun check added to btreetest.

Tue Jun 11 18:04:08 BST 2002  Olly Betts <olly@survex.com>
